// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/rollup.js code splitting should dedupe chunk names using rollup's incrementing counter logic 1`] = `
Array [
  Object {
    "file": "a.js",
    "text": "import { a as common } from './chunk-c1a8c5ee.js';

var css = {
    \\"a\\": \\"shared a\\"
};

console.log(css, common);

const c = import('./chunk-928a7e8e.js');

c.then(console.log);
",
  },
  Object {
    "file": "assets/a-92d8d302.css",
    "text": "/* packages/rollup/test/specimens/multiple-chunks/a.css */
.a {

    color: aqua;
}
",
  },
  Object {
    "file": "assets/b-912c273a.css",
    "text": "/* packages/rollup/test/specimens/multiple-chunks/b.css */
.b {

    color: blue;
}
",
  },
  Object {
    "file": "assets/chunk-6aa4dec1.css",
    "text": "/* packages/rollup/test/specimens/multiple-chunks/constants.css */ /* packages/rollup/test/specimens/multiple-chunks/shared.css */
.shared { color: salmon; }

.other { color: blue; }
",
  },
  Object {
    "file": "assets/chunk2-5c2ce32d.css",
    "text": "/* packages/rollup/test/specimens/multiple-chunks/c.css */
.c {

    color: coral;
}
",
  },
  Object {
    "file": "b.js",
    "text": "import { a as common } from './chunk-c1a8c5ee.js';

var css = {
    \\"b\\": \\"shared b\\"
};

console.log(css, common);
",
  },
  Object {
    "file": "chunk-928a7e8e.js",
    "text": "import { a as common } from './chunk-c1a8c5ee.js';

var css = {
    \\"c\\": \\"shared c\\"
};

console.log(css, common);
",
  },
  Object {
    "file": "chunk-c1a8c5ee.js",
    "text": "var common = \\"common\\";

export { common as a };
",
  },
]
`;

exports[`/rollup.js code splitting should ouput only 1 JSON file 1`] = `
Array [
  Object {
    "file": "chunk.css",
    "text": "/* packages/rollup/test/specimens/simple.css */
.fooga {
    color: red;
}
",
  },
  Object {
    "file": "dependencies.css",
    "text": "/* packages/rollup/test/specimens/dependencies.css */
.wooga {

    background: blue;
}
",
  },
  Object {
    "file": "exports.json",
    "text": "{
    \\"packages/rollup/test/specimens/dependencies.css\\": {
        \\"wooga\\": \\"fooga wooga\\"
    },
    \\"packages/rollup/test/specimens/simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"fooga\\"
    }
}",
  },
]
`;

exports[`/rollup.js code splitting should support dynamic imports 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* packages/rollup/test/specimens/dynamic-imports/a.css */
.a {

    color: aqua;
}
/* packages/rollup/test/specimens/dynamic-imports/f.css */
.f {
    color: floralwhite;
}
/* packages/rollup/test/specimens/dynamic-imports/d.css */
.d {
    
    color: darkred;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* packages/rollup/test/specimens/dynamic-imports/e.css */
.e {
    color: #EEE;
}
/* packages/rollup/test/specimens/dynamic-imports/b.css */
.b {
    
    color: blue;
}
",
  },
  Object {
    "file": "chunk.css",
    "text": "/* packages/rollup/test/specimens/dynamic-imports/c.css */
.c {
    
    color: cyan;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support manual chunks 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* packages/rollup/test/specimens/manual-chunks/a.css */
.a {

    color: red;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* packages/rollup/test/specimens/manual-chunks/b.css */
.b {

    color: blue;
}
",
  },
  Object {
    "file": "shared.css",
    "text": "/* packages/rollup/test/specimens/manual-chunks/d.css */
/* packages/rollup/test/specimens/manual-chunks/c.css */
.c {
    color: green;
    background: darkred;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support splitting up CSS files 1`] = `
Array [
  Object {
    "file": "chunk.css",
    "text": "/* packages/rollup/test/specimens/simple.css */
.fooga {
    color: red;
}
",
  },
  Object {
    "file": "dependencies.css",
    "text": "/* packages/rollup/test/specimens/dependencies.css */
.wooga {

    background: blue;
}
",
  },
]
`;

exports[`/rollup.js code splitting should support splitting up CSS files w/ shared assets 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* packages/rollup/test/specimens/css-chunks/a.css */
.a {

    color: aqua;
}
",
  },
  Object {
    "file": "b.css",
    "text": "/* packages/rollup/test/specimens/css-chunks/b.css */
.b {
    
    color: blue;
}
",
  },
  Object {
    "file": "chunk.css",
    "text": "/* packages/rollup/test/specimens/css-chunks/shared.css */
.shared {
    color: snow;
}
/* packages/rollup/test/specimens/css-chunks/c.css */
.c {

    color: cyan;
}
",
  },
]
`;

exports[`/rollup.js code splitting shouldn't put bundle-specific CSS in common.css 1`] = `
Array [
  Object {
    "file": "a.css",
    "text": "/* packages/rollup/test/specimens/common-splitting/shared.css */
.shared {
    color: snow;
}
/* packages/rollup/test/specimens/common-splitting/a.css */
.a {

    color: aqua;
}
/* packages/rollup/test/specimens/common-splitting/b.css */
.b {

    color: blue;
}
",
  },
  Object {
    "file": "c.css",
    "text": "/* packages/rollup/test/specimens/common-splitting/c.css */
.c {
    color: cyan;
}
",
  },
]
`;

exports[`/rollup.js code splitting shouldn't use entry hashes as part of the CSS file names 1`] = `
Array [
  Object {
    "file": "assets/simple-8d1bcf7b.css",
    "text": "/* packages/rollup/test/specimens/simple.css */
.fooga {
    color: red;
}
",
  },
  Object {
    "file": "simple.15bac60f.js",
    "text": "var css = {
    \\"str\\": \\"\\\\\\"string\\\\\\"\\",
    \\"fooga\\": \\"fooga\\"
};

console.log(css);
",
  },
]
`;
